@@ -284,7 +284,8 @@ DB_ACTION
 	int	lastcheck;
 	int	recipient;
 	char	subject[ACTION_SUBJECT_LEN_MAX];	/* don't use pointer, cose sizeof is used */
-	char	message[MAX_STRING_LEN];		/* don't use pointer, cose sizeof is used */
+	char	*message;
+	int	message_len;
 	int	maxrepeats;
 	int	repeatdelay;
 	char	scripts[MAX_STRING_LEN];
@@ -304,7 +305,6 @@ DB_ALERT
 	int	alertid;
 	int 	actionid;
 	int 	clock;
-/*	char	*type;*/
 	int	mediatypeid;
 	char	*sendto;
 	char	*subject;
