@@ -11,7 +11,7 @@ Server=1
 
 # Number of pre-forked instances of pollers
 # Default value is 6
-# This parameter must be between 5 and 255
+# This parameter must be between 6 and 255
 StartPollers=6
 
 # Number of pre-forked instances of trappers
