@@ -95,3 +95,25 @@ int	zbx_fork()
 	fflush(stderr);
 	return fork();
 }
+
+void	*zbx_malloc(size_t size)
+{
+	int max_attempts;
+	void *ptr = NULL;
+
+	assert(size);
+
+	for(	max_attempts = 10;
+		max_attempts > 0 && !ptr;
+		ptr = malloc(size),
+		max_attempts--
+	);
+
+	if(ptr)	return ptr;
+
+	zabbix_log(LOG_LEVEL_CRIT,"out of memory. requested '%i' bytes.", size);
+	exit(FAIL);
+
+	 /* Program will never reach this point. */
+	return ptr;
+}
