@@ -1,4 +1,4 @@
 SUBDIRS =
 bin_PROGRAMS = zabbix_get
 zabbix_get_SOURCES = zabbix_get.c
-zabbix_get_LDADD = ../libs/zbxcommon/libzbxcommon.a
+zabbix_get_LDADD = ../libs/zbxcommon/libzbxcommon.a ../libs/zbxlog/libzbxlog.a
