@@ -1,4 +1,4 @@
 SUBDIRS =
 bin_PROGRAMS = zabbix_sender
 zabbix_sender_SOURCES = zabbix_sender.c
-zabbix_sender_LDADD = ../libs/zbxcommon/libzbxcommon.a
+zabbix_sender_LDADD = ../libs/zbxcommon/libzbxcommon.a ../libs/zbxlog/libzbxlog.a
