@@ -502,9 +502,9 @@ int	tcp_listen(const char *host, int port, socklen_t *addrlenp)
  * Comments:                                                                  *
  *                                                                            *
  ******************************************************************************/
-/*
-#define USE_TEST_FUNCTION 1 
-*/
+
+/* #define USE_TEST_FUNCTION 1 */
+
 
 #ifdef USE_TEST_FUNCTION
 
@@ -513,7 +513,7 @@ void    run_commands(DB_TRIGGER *trigger,DB_ACTION *action);
 void test()
 {
 	printf("-= Test Started =-\n");
-
+	
 	printf("-= Test completed =-\n");
 }
 #endif
