@@ -1,5 +1,6 @@
 Changes for 1.1.5:
 
+ - increased message size for alerts (Eugene)
  - fixed permission system (Eugene)
  - fixed conflict with cookies of other products (Eugene)
  - added sorting by host in trigger status screen (Eugene)
